--- a/backend/package.json
+++ b/backend/package.json
@@ -2,28 +2,7 @@
   "name": "backend",
   "version": "0.0.0",
   "scripts": {
-    "start": "nodemon"
-  },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts",
-    "exec": "ts-node ./src"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:@typescript-eslint/recommended-requiring-type-checking"
-    ],
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    }
+    "start": "ts-node src"
   },
   "eslintIgnore": [
     "src/public/",
@@ -34,12 +13,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.23.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "nodemon": "^2.0.7"
   }
 }
