--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "frontend",
     "backend"
   ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.3"
+  },
   "homepage": "https://github.com/Alastair-L/tellstones#readme"
 }
